feat:product info over slider added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <title>aeroFlux.Bee</title>
     <link rel="stylesheet" href="main-imports.css">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
+
 <body>
-<!-- header-starts -->
+    <!-- header-starts -->
     <header class="header">
         <div class="logo-head">
             <a href="#"><img class="logo-img" src="assets/drone-logo3-removebg-preview.png" alt="drone-logo"></a>
@@ -35,7 +37,7 @@
         <div class="search-head">
             <a href="#" class="search-submit">
                 <span class=" material-icons material-icons-outlined">
-                search</span>
+                    search</span>
             </a>
             <input type="search" placeholder="Search for products and more" class="search-input">
         </div>
@@ -47,7 +49,7 @@
             </div>
             <a href="#" class="wishlist flex-col">
                 <span class="material-icons material-icons-outlined">
-                favorite_border</span>
+                    favorite_border</span>
                 <span class="actions-title">Wishlist</span>
             </a>
             <a href="#" class="bag flex-col">
@@ -56,9 +58,91 @@
             </a>
         </div>
     </header>
-<!-- header-ends -->
+    <!-- header-ends -->
 
-<!-- slider-section-starts -->
-<!-- slider-section-starts -->
+    <!-- slider-section-starts -->
+    <section aria-label="drone-slider">
+        <div class="carousel">
+            <button data-carousel-button>
+                <span class=" next-icon material-icons material-icons-outlined">
+                navigate_next</span>
+            </button>
+            <button data-carousel-button>
+                <span class="before-icon material-icons material-icons-outlined">
+                navigate_before</span>
+            </button>
+
+            <ul>
+                <li class="slide" data-active>
+                    <div class="main-product-content">
+                        <div class="product-content-box">
+                            <h3 class="sp-h3">Lorem ipsum dolor</h3>
+                            <h1 class="sp-h1">Lorem ipsum dolor sit amet.</h1>
+                            <p class="sp-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat maiores et eos eaque veritatis aut laboriosam earum dolorem iste atque.</p>
+                        </div>
+                        <div class="cta-btns-box">
+                            <a href="#" class="link-cta">
+                                <span class="cta-text">Learn More</span>
+                                <span class=" next-icon material-icons material-icons-outlined">
+                                navigate_next</span>
+                            </a>
+                            <a href="#" class="link-cta">
+                                <span class="cta-text">Buy Now</span>
+                                <span class=" next-icon material-icons material-icons-outlined">
+                                navigate_next</span>
+                            </a>
+                        </div>
+                    </div>
+                    <img src="assets/drone-img3.jpg" alt="drone-img1">
+                </li>
+                <li class="slide">
+                    <div class="main-product-content">
+                        <div class="product-content-box">
+                            <h3 class="sp-h3">Lorem ipsum dolor</h3>
+                            <h1 class="sp-h1">Lorem ipsum dolor sit amet.</h1>
+                            <p class="sp-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat maiores et eos eaque veritatis aut laboriosam earum dolorem iste atque.</p>
+                        </div>
+                        <div class="cta-btns-box">
+                            <a href="#" class="link-cta">
+                                <span class="cta-text">Learn More</span>
+                                <span class=" next-icon material-icons material-icons-outlined">
+                                navigate_next</span>
+                            </a>
+                            <a href="#" class="link-cta">
+                                <span class="cta-text">Buy Now</span>
+                                <span class=" next-icon material-icons material-icons-outlined">
+                                navigate_next</span>
+                            </a>
+                        </div>
+                    </div>
+                    <img src="assets/drone-img2.jpg" alt="drone-img2">
+                </li>
+                <li class="slide">
+                    <div class="main-product-content">
+                        <div class="product-content-box">
+                            <h3 class="sp-h3">Lorem ipsum dolor</h3>
+                            <h1 class="sp-h1">Lorem ipsum dolor sit amet.</h1>
+                            <p class="sp-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat maiores et eos eaque veritatis aut laboriosam earum dolorem iste atque.</p>
+                        </div>
+                        <div class="cta-btns-box">
+                            <a href="#" class="link-cta">
+                                <span class="cta-text">Learn More</span>
+                                <span class=" next-icon material-icons material-icons-outlined">
+                                navigate_next</span>
+                            </a>
+                            <a href="#" class="link-cta">
+                                <span class="cta-text">Buy Now</span>
+                                <span class=" next-icon material-icons material-icons-outlined">
+                                navigate_next</span>
+                            </a>
+                        </div>
+                    </div>
+                    <img src="assets/drone-img1.jpg" alt="drone-img3">
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!-- slider-section-starts -->
 </body>
+
 </html>
