feat:explore section added

--- a/index.html
+++ b/index.html
@@ -143,6 +143,65 @@
         </div>
     </section>
     <!-- slider-section-starts -->
+
+    <!-- Explore products starts-->
+    <section class="main-explore-box">
+        <div class="explore-content">
+            <div class="explore-title">Explore Products in Different Fields</div>
+            <div class="explore-child-list">
+                <a href="#" class="explore-child-item">
+                    <img class="explore-img" src="assets/drone-exp1.jpg" alt="video-production-explore">
+                    <div class="explore-child-content">
+                        <h1 class="sp-h1">explore explore</h1>
+                        <h3 class="sp-h3">explore explore explore explore</h3>
+                        <div class="link-cta b0-cta">
+                            <span class="cta-text">Learn More</span>
+                            <span class=" next-icon material-icons material-icons-outlined">
+                            navigate_next</span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="explore-child-item">
+                    <img class="explore-img" src="assets/drone-exp1.jpg" alt="video-production-explore">
+                    <div class="explore-child-content">
+                        <h1 class="sp-h1">explore explore</h1>
+                        <h3 class="sp-h3">explore explore explore explore explore explore explore explore</h3>
+                        <div class="link-cta b0-cta">
+                            <span class="cta-text">Learn More</span>
+                            <span class=" next-icon material-icons material-icons-outlined">
+                            navigate_next</span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="explore-child-item">
+                    <img class="explore-img" src="assets/drone-exp1.jpg" alt="video-production-explore">
+                    <div class="explore-child-content">
+                        <h1 class="sp-h1">explore explore </h1>
+                        <h3 class="sp-h3">explore explore explore explore</h3>
+                        <div class="link-cta b0-cta">
+                            <span class="cta-text">Learn More</span>
+                            <span class=" next-icon material-icons material-icons-outlined">
+                            navigate_next</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+    </section>
+
 </body>
 
 </html>
+
+
+<!-- <div class="btn-explore">
+    <a href="#" class="link-cta b0-cta">
+        <span class="cta-text">Learn More</span>
+        <span class=" next-icon material-icons material-icons-outlined">
+        navigate_next</span>
+    </a>
+</div> -->
+
