--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
 
 <body>
     <!-- header-starts -->
-    <header class="header">
-        <div class="logo-head">
+    <header class="header flex-vCenter">
+        <div class="logo-head flex-vCenter">
             <a href="#"><img class="logo-img" src="assets/drone-logo3-removebg-preview.png" alt="drone-logo"></a>
             <a href="#" class="logo-name">AEROFLUX-BEE</a>
         </div>
 
         <nav class="catLinks-head">
-            <ul>
+            <ul class="d-flex">
                 <li class="cat-item">
-                    <a href="#" class="cat-link">FPV-RACING</a>
+                    <a href="#" class="cat-link in-block">FPV-RACING</a>
                 </li>
                 <li class="cat-item">
-                    <a href="#" class="cat-link">FILM-MAKING</a>
+                    <a href="#" class="cat-link in-block">FILM-MAKING</a>
                 </li>
                 <li class="cat-item">
-                    <a href="#" class="cat-link">ACCESSORIES</a>
+                    <a href="#" class="cat-link in-block">ACCESSORIES</a>
                 </li>
             </ul>
         </nav>
 
-        <div class="search-head">
+        <div class="search-head in-block">
             <a href="#" class="search-submit">
                 <span class=" material-icons material-icons-outlined">
-                    search</span>
+                search</span>
             </a>
-            <input type="search" placeholder="Search for products and more" class="search-input">
+            <input class="search-input" type="search" placeholder="Search for products and more" >
         </div>
 
-        <div class="actions-head">
-            <div class="user flex-col">
+        <div class="actions-head flex-vCenter">
+            <div class="user flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> person_outline</span>
                 <span class="actions-title">Profile</span>
             </div>
-            <a href="#" class="wishlist flex-col">
+            <a href="#" class="wishlist flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined">
-                    favorite_border</span>
+                favorite_border</span>
                 <span class="actions-title">Wishlist</span>
             </a>
-            <a href="#" class="bag flex-col">
+            <a href="#" class="bag flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> shopping_bag</span>
                 <span class="actions-title">Bag</span>
             </a>
