--- a/pages/products-cat-racing.html
+++ b/pages/products-cat-racing.html
@@ -461,12 +461,13 @@
         </section>
       </main>
       <footer class="footer">
-          <div class="footer-content">
-            <span class="tagline">WITH FREEDOM</span>
-            <span>
-                <i class="fa-thin fa-code-branch"></i>
+           <span class="moon-icon material-icons material-icons-round">
+            nightlight
             </span>
-          </div>      
+            <span class="tagline">INTO FREEDOM</span>
+            <a href="https://github.com/nightlight-wander" target="_blank"><i class="fab fa-github git-icon"></i>
+            </a>
+            
       </footer>
     </div>
 </body>
