footer style refactor

--- a/pages/products-cat-racing.html
+++ b/pages/products-cat-racing.html
@@ -465,8 +465,8 @@
             nightlight
             </span>
             <span class="tagline">INTO FREEDOM</span>
-            <a href="https://github.com/nightlight-wander" target="_blank"><i class="fab fa-github git-icon"></i>
-            </a>
+            <!-- <a href="https://github.com/nightlight-wander" target="_blank"><i class="fab fa-github git-icon"></i>
+            </a> -->
             
       </footer>
     </div>
