feat:sign in done

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
 
         <div class="actions-head flex-vCenter">
-            <div class="user flex-col flex-vCenter">
+            <a href="pages/sign-up/signup.html" class="user flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> person_outline</span>
                 <span class="actions-title">Profile</span>
-            </div>
+            </a>
             <a href="#" class="wishlist flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined">
                 favorite_border</span>
@@ -196,12 +196,4 @@
 
 </html>
 
-
-<!-- <div class="btn-explore">
-    <a href="#" class="link-cta b0-cta">
-        <span class="cta-text">Learn More</span>
-        <span class=" next-icon material-icons material-icons-outlined">
-        navigate_next</span>
-    </a>
-</div> -->
 
