feat:login page header footer styled

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- header-starts -->
     <header class="header flex-vCenter">
         <div class="logo-head flex-vCenter">
-            <a href="#"><img class="logo-img" src="assets/drone-logo3-removebg-preview.png" alt="drone-logo"></a>
-            <a href="#" class="logo-name">AEROFLUX-BEE</a>
+            <a href="index.html"><img class="logo-img" src="assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
+            <a href="index.html" class="logo-name">AEROFLUX-BEE</a>
         </div>
 
         <nav class="catLinks-head">
