feat:main page updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="main-imports.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/00e65d596a.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -16,8 +17,8 @@
     <!-- header-starts -->
     <header class="header flex-vCenter">
         <div class="logo-head flex-vCenter">
-            <a href="#"><img class="logo-img" src="assets/drone-logo3-removebg-preview.png" alt="drone-logo"></a>
-            <a href="#" class="logo-name">AEROFLUX-BEE</a>
+            <a href="index.html"><img class="logo-img" src="assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
+            <a href="index.html" class="logo-name">AEROFLUX-BEE</a>
         </div>
 
         <nav class="catLinks-head">
@@ -43,10 +44,10 @@
         </div>
 
         <div class="actions-head flex-vCenter">
-            <div class="user flex-col flex-vCenter">
+            <a href="/pages/sign-up/signup.html" class="user flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> person_outline</span>
                 <span class="actions-title">Profile</span>
-            </div>
+            </a>
             <a href="#" class="wishlist flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined">
                 favorite_border</span>
@@ -189,19 +190,19 @@
                 </a>
             </div>
         </div>
-        
     </section>
+
+    <footer class="footer">
+        <span class="moon-icon material-icons material-icons-round">
+            nightlight
+        </span>
+        <div class="tagline">FREEYAY</div>
+        <a href="https://github.com/nightlight-wander" target="_blank"><i class="fab fa-github git-icon"></i>
+        </a>
+    </footer>
 
 </body>
 
 </html>
 
-
-<!-- <div class="btn-explore">
-    <a href="#" class="link-cta b0-cta">
-        <span class="cta-text">Learn More</span>
-        <span class=" next-icon material-icons material-icons-outlined">
-        navigate_next</span>
-    </a>
-</div> -->
 
