home link fixed

--- a/pages/sign-up/signup.html
+++ b/pages/sign-up/signup.html
@@ -22,8 +22,8 @@
         <!-- header-starts -->
         <header class="header flex-vCenter">
             <div class="logo-head flex-vCenter">
-                <a href="/pages/sign-up/signup.html"><img class="logo-img" src="/assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
-                <a href="/pages/sign-up/signup.html" class="logo-name">AEROFLUX-BEE</a>
+                <a href="/index.html"><img class="logo-img" src="/assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
+                <a href="/index.html" class="logo-name">AEROFLUX-BEE</a>
             </div>
 
             <nav class="catLinks-head">
@@ -84,7 +84,7 @@
                                 Password<span class="req-feild">*</span>
                             </label>
                             <input id="password" type="email" class="text-input sp4-mg-lr">
-                            <span class="eye-icon1 material-icons material-icons-outlined">
+                            <span class="eye-icon material-icons material-icons-outlined">
                                 visibility</span>
             
                         </div>
