--- a/pages/sign-up/signin.html
+++ b/pages/sign-up/signin.html
@@ -22,8 +22,8 @@
         <!-- header-starts -->
         <header class="header flex-vCenter">
             <div class="logo-head flex-vCenter">
-                <a href="/pages/sign-up/signup.html"><img class="logo-img" src="/assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
-                <a href="/pages/sign-up/signup.html" class="logo-name">AEROFLUX-BEE</a>
+                <a href="/index.html"><img class="logo-img" src="/assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
+                <a href="/index.html" class="logo-name">AEROFLUX-BEE</a>
             </div>
 
             <nav class="catLinks-head">
