--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- header-starts -->
     <header class="header flex-vCenter">
         <div class="logo-head flex-vCenter">
-            <a href="#"><img class="logo-img" src="assets/drone-logo3-removebg-preview.png" alt="drone-logo"></a>
+            <a href="#"><img class="logo-img" src="assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
             <a href="#" class="logo-name">AEROFLUX-BEE</a>
         </div>
 
         <nav class="catLinks-head">
             <ul class="d-flex">
                 <li class="cat-item">
-                    <a href="#" class="cat-link in-block">FPV-RACING</a>
+                    <a href="pages/product-listing/products-cat-racing.html" class="cat-link in-block">FPV-RACING</a>
                 </li>
                 <li class="cat-item">
                     <a href="#" class="cat-link in-block">FILM-MAKING</a>
@@ -39,20 +39,21 @@
                 <span class=" material-icons material-icons-outlined">
                 search</span>
             </a>
-            <input class="search-input" type="search" placeholder="Search for products and more" >
+            <label for="search"></label>
+            <input id="search"class="search-input" type="search" placeholder="Search for products and more" >
         </div>
 
         <div class="actions-head flex-vCenter">
-            <div class="user flex-col flex-vCenter">
+            <a class="user flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> person_outline</span>
                 <span class="actions-title">Profile</span>
-            </div>
+            </a>
             <a href="#" class="wishlist flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined">
                 favorite_border</span>
                 <span class="actions-title">Wishlist</span>
             </a>
-            <a href="#" class="bag flex-col flex-vCenter">
+            <a href="pages/cart/cart.html" class="bag flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> shopping_bag</span>
                 <span class="actions-title">Bag</span>
             </a>
