--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- header-starts -->
     <header class="header flex-vCenter">
         <div class="logo-head flex-vCenter">
-            <a href="#"><img class="logo-img" src="assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
-            <a href="#" class="logo-name">AEROFLUX-BEE</a>
+            <a href="index.html"><img class="logo-img" src="assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
+            <a href="index.html" class="logo-name">AEROFLUX-BEE</a>
         </div>
 
         <nav class="catLinks-head">
@@ -94,7 +94,7 @@
                             </a>
                         </div>
                     </div>
-                    <img src="assets/drone-img3.jpg" alt="drone-img1">
+                    <img src="assets/drone-img3.jpg" alt="drone-img1" loading="lazy">
                 </li>
                 <li class="slide">
                     <div class="main-product-content">
@@ -138,7 +138,7 @@
                             </a>
                         </div>
                     </div>
-                    <img src="assets/drone-img1.jpg" alt="drone-img3">
+                    <img src="assets/drone-img1.jpg" alt="drone-img3" loading="lazy">
                 </li>
             </ul>
         </div>
@@ -177,7 +177,7 @@
                 </a>
 
                 <a href="#" class="explore-child-item">
-                    <img class="explore-img" src="assets/drone-exp3.jpg" alt="video-production-explore">
+                    <img class="explore-img" src="assets/drone-exp3.jpg" alt="video-production-explore" loading="lazy">
                     <div class="explore-child-content">
                         <h1 class="sp-h1">explore explore </h1>
                         <h3 class="sp-h3">explore explore explore explore</h3>
@@ -189,20 +189,8 @@
                     </div>
                 </a>
             </div>
-        </div>
-        
+        </div> 
     </section>
-
 </body>
-
 </html>
-
-
-<!-- <div class="btn-explore">
-    <a href="#" class="link-cta b0-cta">
-        <span class="cta-text">Learn More</span>
-        <span class=" next-icon material-icons material-icons-outlined">
-        navigate_next</span>
-    </a>
-</div> -->
 
