fix:links fixed

--- a/pages/sign-up/signup.html
+++ b/pages/sign-up/signup.html
@@ -53,12 +53,12 @@
                     <span class="material-icons material-icons-outlined"> person_outline</span>
                     <span class="actions-title">Profile</span>
                 </a>
-                <a href="#" class="wishlist flex-col flex-vCenter">
+                <a href="/wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined">
                         favorite_border</span>
                     <span class="actions-title">Wishlist</span>
                 </a>
-                <a href="#" class="bag flex-col flex-vCenter">
+                <a href="cart/cart.html" class="bag flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined"> shopping_bag</span>
                     <span class="actions-title">Bag</span>
                 </a>
