--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="catLinks-head">
             <ul class="d-flex">
                 <li class="cat-item">
-                    <a href="#" class="cat-link in-block">FPV-RACING</a>
+                    <a href="pages/product-listing/products-cat-racing.html" class="cat-link in-block">FPV-RACING</a>
                 </li>
                 <li class="cat-item">
                     <a href="#" class="cat-link in-block">FILM-MAKING</a>
@@ -47,12 +47,12 @@
                 <span class="material-icons material-icons-outlined"> person_outline</span>
                 <span class="actions-title">Profile</span>
             </a>
-            <a href="#" class="wishlist flex-col flex-vCenter">
+            <a href="pages/wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined">
                 favorite_border</span>
                 <span class="actions-title">Wishlist</span>
             </a>
-            <a href="#" class="bag flex-col flex-vCenter">
+            <a href="pages/cart/cart.html" class="bag flex-col flex-vCenter">
                 <span class="material-icons material-icons-outlined"> shopping_bag</span>
                 <span class="actions-title">Bag</span>
             </a>
