fix:links fixed

--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -51,11 +51,11 @@
             </div>
 
             <div class="actions-head flex-vCenter">
-                <a class="user flex-col flex-vCenter">
+                <a href="/pages/sign-up/signup.html" class="user flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined"> person_outline</span>
                     <span class="actions-title">Profile</span>
                 </a>
-                <a href="#" class="wishlist flex-col flex-vCenter">
+                <a href="../wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined">
                         favorite_border</span>
                     <span class="actions-title">Wishlist</span>
