--- a/pages/product-listing/products-cat-racing.html
+++ b/pages/product-listing/products-cat-racing.html
@@ -48,16 +48,16 @@
             </div>
 
             <div class="actions-head flex-vCenter">
-                <a class="user flex-col flex-vCenter">
+                <a href="/pages/sign-up/signup.html" class="user flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined"> person_outline</span>
                     <span class="actions-title">Profile</span>
                 </a>
-                <a href="#" class="wishlist flex-col flex-vCenter">
+                <a href="/pages/wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined">
                         favorite_border</span>
                     <span class="actions-title">Wishlist</span>
                 </a>
-                <a href="#" class="bag flex-col flex-vCenter">
+                <a href="/pages/cart/cart.html" class="bag flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined"> shopping_bag</span>
                     <span class="actions-title">Bag</span>
                 </a>
