--- a/pages/sign-up/signup.html
+++ b/pages/sign-up/signup.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AEROFLUX-BEE|SignUp</title>
     <link rel="stylesheet" href="/main-imports.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="../compStyles/buttons.css">
 
@@ -53,12 +54,12 @@
                     <span class="material-icons material-icons-outlined"> person_outline</span>
                     <span class="actions-title">Profile</span>
                 </a>
-                <a href="/wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
+                <a href="../wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined">
                         favorite_border</span>
                     <span class="actions-title">Wishlist</span>
                 </a>
-                <a href="cart/cart.html" class="bag flex-col flex-vCenter">
+                <a href="../cart/cart.html" class="bag flex-col flex-vCenter">
                     <span class="material-icons material-icons-outlined"> shopping_bag</span>
                     <span class="actions-title">Bag</span>
                 </a>
