--- a/pages/sign-up/signin.html
+++ b/pages/sign-up/signin.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AEROFLUX-BEE|SignUp</title>
     <link rel="stylesheet" href="/main-imports.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="../compStyles/buttons.css">
 
