nav responsiveness at 1000px

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <a href="index.html" class="logo-name">AEROFLUX-BEE</a>
         </div>
 
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+
+
         <nav class="catLinks-head">
             <ul class="d-flex">
                 <li class="cat-item">
@@ -35,6 +38,10 @@
             </ul>
         </nav>
 
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+
         <div class="search-head in-block">
             <a href="#" class="search-submit">
                 <span class=" material-icons material-icons-outlined">
@@ -46,16 +53,16 @@
 
         <div class="actions-head flex-vCenter">
             <a href="/pages/sign-up/signup.html" class="user flex-col flex-vCenter">
-                <span class="material-icons material-icons-outlined"> person_outline</span>
+                <span class="actions-icon material-icons material-icons-outlined"> person_outline</span>
                 <span class="actions-title">Profile</span>
             </a>
             <a href="pages/wishlist/wishlist.html" class="wishlist flex-col flex-vCenter">
-                <span class="material-icons material-icons-outlined">
+                <span class="actions-icon material-icons material-icons-outlined">
                 favorite_border</span>
                 <span class="actions-title">Wishlist</span>
             </a>
             <a href="pages/cart/cart.html" class="bag flex-col flex-vCenter">
-                <span class="material-icons material-icons-outlined"> shopping_bag</span>
+                <span class="actions-icon material-icons material-icons-outlined"> shopping_bag</span>
                 <span class="actions-title">Bag</span>
             </a>
         </div>
