--- a/pages/sign-up/signup.html
+++ b/pages/sign-up/signup.html
@@ -23,14 +23,18 @@
         <!-- header-starts -->
         <header class="header flex-vCenter">
             <div class="logo-head flex-vCenter">
-                <a href="/index.html"><img class="logo-img" src="/assets/drone-logo-new-removebg-preview.png" alt="drone-logo"></a>
+                <a href="/index.html"><img class="logo-img" src="/assets/drone-logo-new-removebg-preview.png"
+                        alt="drone-logo"></a>
                 <a href="/index.html" class="logo-name">AEROFLUX-BEE</a>
             </div>
+
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
             <nav class="catLinks-head">
                 <ul class="d-flex">
                     <li class="cat-item">
-                        <a href="/pages/product-listing/products-cat-racing.html" class="cat-link in-block">FPV-RACING</a>
+                        <a href="/pages/product-listing/products-cat-racing.html"
+                            class="cat-link in-block">FPV-RACING</a>
                     </li>
                     <li class="cat-item">
                         <a href="#" class="cat-link in-block">FILM-MAKING</a>
@@ -40,6 +44,10 @@
                     </li>
                 </ul>
             </nav>
+
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
 
             <div class="search-head in-block">
                 <a href="#" class="search-submit">
