--- a/pages/wishlist/wishlist.html
+++ b/pages/wishlist/wishlist.html
@@ -27,6 +27,8 @@
                 <a href="/index.html" class="logo-name">AEROFLUX-BEE</a>
             </div>
 
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+
             <nav class="catLinks-head">
                 <ul class="d-flex">
                     <li class="cat-item">
@@ -41,6 +43,10 @@
                     </li>
                 </ul>
             </nav>
+
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
 
             <div class="search-head in-block">
                 <a href="#" class="search-submit">
